Closed Bug 323741 Opened 19 years ago Closed 19 years ago

"ASSERTION: index out of range" with this MathML testcase

Categories

(Core :: MathML, defect)

PowerPC
macOS
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: jruderman, Assigned: rbs)

Details

(4 keywords)

Attachments

(2 files)

Steps to reproduce:
1. Load the testcase.
2. Resize the window (sometimes necessary, sometimes not necessary).

Result:

###!!! ASSERTION: index out of range: '0 <= aIndex && aIndex < Count()', file /Users/admin/trunk/mozilla/xpcom/glue/nsVoidArray.h, line 80
Attached file testcase
Attached patch patchSplinter Review
The bug is at paint() due to unset values resulting from the fact that a troublesome frame hasn't been reflowed. The troublesome frame happens to be a child of <mspace> which is a leaf frame... It is not reflowed because it was not supposed to be there in the first place. So the fix is to not create those bogus children to begin with.
Attachment #208832 - Flags: superreview?(roc)
Attachment #208832 - Flags: review?(roc)
Attachment #208832 - Flags: superreview?(roc)
Attachment #208832 - Flags: superreview+
Attachment #208832 - Flags: review?(roc)
Attachment #208832 - Flags: review+
Checked in.
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Doesn't this need to get fixed on branches too?
Comment on attachment 208832 [details] [diff] [review]
patch

No particular reason not to have it on the branch indeed.
Attachment #208832 - Flags: approval1.8.1.1?
Attachment #208832 - Flags: approval1.8.0.9?
Note that I've already had to merge around this, so you'll get merge conflicts...
Comment on attachment 208832 [details] [diff] [review]
patch

approved for 1.8/1.8.0 branch, a=dveditz for drivers
Attachment #208832 - Flags: approval1.8.1.1?
Attachment #208832 - Flags: approval1.8.1.1+
Attachment #208832 - Flags: approval1.8.0.9?
Attachment #208832 - Flags: approval1.8.0.9+
Landed on the 1.8.0 and 1.8 branches.
Verified fixed on trunk and branches, after updating and rebuilding my trunk and branch debug builds, I don't get the assertion anymore.
Status: RESOLVED → VERIFIED
Crashtest checked in.
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: