<mspace> is a leaf frame. Don't create bogus child frames inside <mspace> having invalid markup with child content. b=323741, r+sr=roc