layout/mathml/base/src/nsMathMLmspaceFrame.cpp
@@ -66,6 +66,12 @@ nsMathMLmspaceFrame::~nsMathMLmspaceFrame()
 {
 }
 
+PRBool
+nsMathMLmspaceFrame::IsLeaf() const
+{
+  return PR_TRUE;
+}
+
 void
 nsMathMLmspaceFrame::ProcessAttributes(nsPresContext* aPresContext)
 {
